--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+streamlit
 cdsapi
 xarray
 numpy
 matplotlib
 cartopy
-streamlit
 pandas
-geopandas
 scikit-learn
+h5netcdf
+netCDF4
+matplotlib-inline
+pillow
